test/corpus/pragma.txt
=================
Simple pragma
=================
test

    <abc>
---

(method
    (unary_selector (unary_identifier))
    (pragma (pragma_unary_selector (unary_identifier))))

=================
Keyword pragma
=================
test

    <abc: 12 def: #(test abc) hello: 'a'>
---

(method
    (unary_selector (unary_identifier))
    (pragma (pragma_keyword_selector
	    (keyword) (number)
	    (keyword) (literal_array (symbol) (symbol))
	    (keyword) (string))))

=================
Multiple pragmas
=================
openExplorer
	<convert>
	<convertPriority: -1>
---

(method
    (unary_selector (unary_identifier))
    (pragma (pragma_unary_selector (unary_identifier)))
    (pragma (pragma_keyword_selector (keyword) (number))))

